Added h1 and h2 to header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
 
   <body>
-    <header></header>
+    <header>
+      <h1>City</h1>
+      <h2>Temperature</h2>
+    </header>
     <footer>
       This project was coded by
       <a href="https://github.com/pink-clarinet65/" target="_blank"
