Added P with details

--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Connie's Weather App</title>
   </head>
-
   <body>
     <header>
       <h1>City</h1>
       <h2>Temperature</h2>
+      <p>
+        Monday 16:45, moderate rain <br />
+        Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+      </p>
     </header>
+    <main>
+      <form>
+        <input type="search" placeholder="Enter a city.." required />
+        <input type="submit" value="Search" />
+      </form>
+    </main>
     <footer>
       This project was coded by
       <a href="https://github.com/pink-clarinet65/" target="_blank"
