Changed city and temperature values

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <h1>City</h1>
-      <h2>Temperature</h2>
+      <h1>Rabat</h1>
+      <h2>24°C</h2>
       <p>
         Monday 16:45, moderate rain <br />
         Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
