Added 3 divs for h1, h2, and p

--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
   </head>
   <body>
     <header>
-      <h1>Rabat</h1>
-      <h2>⛅24°C</h2>
-      <p>
-        Monday 16:45, moderate rain <br />
-        Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
-      </p>
+      <div>
+        <h1>Rabat</h1>
+      </div>
+      <div>
+        <h2>⛅24°C</h2>
+      </div>
+      <div>
+        <p>
+          Monday 16:45, moderate rain <br />
+          Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+        </p>
+      </div>
     </header>
     <main>
       <form>
