added div class to wrap body

--- a/index.html
+++ b/index.html
@@ -7,42 +7,44 @@
     <title>Connie's Weather App</title>
   </head>
   <body>
-    <header>
-      <div>
-        <h1>Rabat</h1>
+    <div class="weather-app">
+      <header>
+        <div>
+          <h1>Rabat</h1>
+          <p>
+            Monday 16:45, moderate rain <br />
+            Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+          </p>
+        </div>
+        <div>
+          <h2>⛅24°C</h2>
+        </div>
+      </header>
+      <main>
+        <form>
+          <input type="search" placeholder="Enter a city.." required />
+          <input type="submit" value="Search" />
+        </form>
+      </main>
+      <footer>
         <p>
-          Monday 16:45, moderate rain <br />
-          Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+          This project was coded by
+          <a href="https://github.com/pink-clarinet65/" target="_blank"
+            >Connie Mutua</a
+          >
+          and is
+          <a
+            href="https://github.com/pink-clarinet65/Connie-s-weather-app"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://connieshomework.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
-      </div>
-      <div>
-        <h2>⛅24°C</h2>
-      </div>
-    </header>
-    <main>
-      <form>
-        <input type="search" placeholder="Enter a city.." required />
-        <input type="submit" value="Search" />
-      </form>
-    </main>
-    <footer>
-      <p>
-        This project was coded by
-        <a href="https://github.com/pink-clarinet65/" target="_blank"
-          >Connie Mutua</a
-        >
-        and is
-        <a
-          href="https://github.com/pink-clarinet65/Connie-s-weather-app"
-          target="_blank"
-        >
-          on GitHub</a
-        >
-        and
-        <a href="https://connieshomework.netlify.app/" target="_blank"
-          >hosted on Netlify</a
-        >
-      </p>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
