added class "link" in html targeting footer links and updated link colors on css

--- a/index.html
+++ b/index.html
@@ -40,18 +40,25 @@
       <footer>
         <p>
           This project was coded by
-          <a href="https://github.com/pink-clarinet65/" target="_blank"
+          <a
+            href="https://github.com/pink-clarinet65/"
+            target="_blank"
+            class="links"
             >Connie Mutua</a
           >
           and is
           <a
             href="https://github.com/pink-clarinet65/Connie-s-weather-app"
             target="_blank"
+            class="links"
           >
             on GitHub</a
           >
           and
-          <a href="https://connieshomework.netlify.app/" target="_blank"
+          <a
+            href="https://connieshomework.netlify.app/"
+            target="_blank"
+            class="links"
             >hosted on Netlify</a
           >
         </p>
