--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <input type="submit" value="Search" class="search-form-button" />
         </form>
       </main>
-      <footer>
+      <footer class="publisher-details">
         <p>
           This project was coded by
           <a
