added div class weather-app-details to html and updated font size on its css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="weather-app">
       <header>
-        <div>
+        <div class="weather-app-details">
           <h1>Rabat</h1>
           <p>
             Monday 16:45, moderate rain <br />
