--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <div class="weather-app-details">
           <h1>Rabat</h1>
           <p>
-            Monday 16:45, moderate rain <br />
-            Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+            <span class="weather-paragraph">
+              Monday 16:45, moderate rain <br />
+              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+            </span>
           </p>
         </div>
         <div>
