removed weahter-paragraph and replaced with small and fixed class details in css

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="weather-app-details">
           <h1>Rabat</h1>
           <p>
-            <span class="weather-paragraph">
+            <small>
               Monday 16:45, moderate rain <br />
               Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
-            </span>
+            </small>
           </p>
         </div>
         <div>
