--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
           </p>
         </div>
         <div>
-          <h2>⛅24°C</h2>
+          <h2>
+            <span class="temperature-icon">⛅</span>24<span
+              class="temperature-symbol"
+              >°C</span
+            >
+          </h2>
         </div>
       </header>
       <main>
