updated css elements of icon, symbol and h2

--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
         </div>
         <div>
           <h2>
-            <span class="temperature-icon">⛅</span>24<span
-              class="temperature-symbol"
-              >°C</span
-            >
+            <span class="temperature-icon">⛅</span>
+            24<span class="temperature-symbol">°C</span>
           </h2>
         </div>
       </header>
