--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <div>
           <h2>
             <span class="temperature-icon">⛅</span>
-            24<span class="temperature-symbol">°C</span>
+            <span id="current-temperature">24</span
+            ><span class="temperature-symbol">°C</span>
           </h2>
         </div>
       </header>
