updated github link in html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             target="_blank"
             class="links"
           >
-            on GitHub</a
+            open-sourced on GitHub</a
           >
           and
           <a
