--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
           <h1 id="city-name">Rabat</h1>
           <p>
             <small>
-              Monday 16:45, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              Monday 16:45, <span id="weather-description">moderate rain</span>
+              <br />
+              Humidity: <strong id="weather-humidity">87%</strong>, Wind:
+              <strong id="weather-wind">7.2km/h</strong>
             </small>
           </p>
         </div>
