added time and date element to app.js and included formatDate function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
           <h1 id="city-name">Rabat</h1>
           <p>
             <small>
-              Monday 16:45, <span id="weather-description">moderate rain</span>
+              <span id="current-time">Monday 16:45</span> ,
+              <span id="weather-description">moderate rain</span>
               <br />
               Humidity: <strong id="weather-humidity">87%</strong>, Wind:
               <strong id="weather-wind">7.2km/h</strong>
