updated icon element in html, css and js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
         </div>
         <div>
           <h2>
-            <span class="temperature-icon">⛅</span>
+            <span class="temperature-icon">
+              <div id="icon">
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
+                  alt="icon"
+                  id="weather-icon"
+                />
+              </div>
+            </span>
             <span id="current-temperature">24</span
             ><span class="temperature-symbol">°C</span>
           </h2>
