updated link to netlify

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           >
           and
           <a
-            href="https://connieshomework.netlify.app/"
+            href="https://conniesweatherapp.netlify.app"
             target="_blank"
             class="links"
             >hosted on Netlify</a
