Added div classes for weather forecast to html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
           />
           <input type="submit" value="Search" class="search-form-button" />
         </form>
+        <br />
+        <div class="weather-forecast">
+          <div class="forecast-week">
+            <div class="forecast-day">Mon</div>
+            <div class="forecast-icon">⛅</div>
+            <div class="forecast-temperatures">15° 9°</div>
+          </div>
+        </div>
       </main>
       <footer class="publisher-details">
         <p>
