Updated html and css for forecast

--- a/index.html
+++ b/index.html
@@ -60,7 +60,20 @@
           <div class="forecast-week">
             <div class="forecast-day">Mon</div>
             <div class="forecast-icon">⛅</div>
-            <div class="forecast-temperatures">15° 9°</div>
+            <div class="forecast-temperatures">
+              <strong><div class="forecast-temp-one">15°</div></strong>
+              <div class="forecast-temp-one">9°</div>
+            </div>
+          </div>
+        </div>
+        <div class="weather-forecast">
+          <div class="forecast-week">
+            <div class="forecast-day">Tue</div>
+            <div class="forecast-icon">⛅</div>
+            <div class="forecast-temperatures">
+              <strong><div class="forecast-temp-one">15°</div></strong>
+              <div class="forecast-temp-one">9°</div>
+            </div>
           </div>
         </div>
       </main>
