--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="forecast-day">Mon</div>
             <div class="forecast-icon">⛅</div>
             <div class="forecast-temperatures">
-              <strong><div class="forecast-temp-one">15°</div></strong>
+              <div class="forecast-temp-one"><strong>15°</strong></div>
               <div class="forecast-temp-one">9°</div>
             </div>
           </div>
@@ -71,7 +71,7 @@
             <div class="forecast-day">Tue</div>
             <div class="forecast-icon">⛅</div>
             <div class="forecast-temperatures">
-              <strong><div class="forecast-temp-one">15°</div></strong>
+              <div class="forecast-temp-one"><strong>15°</strong></div>
               <div class="forecast-temp-one">9°</div>
             </div>
           </div>
