injected forecast loop functions in app.js by transferring code from html

--- a/index.html
+++ b/index.html
@@ -56,26 +56,7 @@
           <input type="submit" value="Search" class="search-form-button" />
         </form>
         <br />
-        <div class="weather-forecast">
-          <div class="forecast-week">
-            <div class="forecast-day">Mon</div>
-            <div class="forecast-icon">⛅</div>
-            <div class="forecast-temperatures">
-              <div class="forecast-temp-one"><strong>15°</strong></div>
-              <div class="forecast-temp-one">9°</div>
-            </div>
-          </div>
-        </div>
-        <div class="weather-forecast">
-          <div class="forecast-week">
-            <div class="forecast-day">Tue</div>
-            <div class="forecast-icon">⛅</div>
-            <div class="forecast-temperatures">
-              <div class="forecast-temp-one"><strong>15°</strong></div>
-              <div class="forecast-temp-one">9°</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer class="publisher-details">
         <p>
